@@ -658,11 +658,14 @@
 
       \item \code{[dpqr]nbinom(*, size=Inf, mu=.)} now works as limit
       case, for \sQuote{dpq} as the Poisson.  (\PR{16727})\cr
-      \code{pnbinom()} no longer loops infinitely in border cases.% yet to port!
+      \code{pnbinom()} no longer loops infinitely in border cases.
 
       \item \code{approxfun(*, method="constant")} and hence \code{ecdf()}
       which calls the former now correctly \dQuote{predict} \code{NaN}
       values as \code{NaN}.
+
+      \item \code{summary.data.frame()} now displays \code{NA}s in
+      \code{Date} columns in all cases.  (\PR{16709})
     }
   }
 }
